Fixed topbar and added icons

--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,28 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Montserrat',
     monospace;
 }
 
+img {
+  width: 75%; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px; /* Adjust padding as needed */
+}
 
 .navtab {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   bottom: 0;
   display: flex;
   justify-content: space-evenly;
@@ -78,25 +85,13 @@ code {
   background-color: red;
 }
 
-.loginlink {
-  background-color:aqua;
-}
-
-.registerlink {
-  background-color:beige;
-}
-
-.logoutlink {
-  background-color:bisque
-}
-
 
 input {
   display: block;
   width: 310px;
   padding: 6px;
   border-radius: 6px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   border: 3px solid black;
   margin-bottom: 14px;
@@ -105,7 +100,7 @@ input {
 button {
   display: block;
   padding: 14px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   background-color: black;
   color: white;
