--- a/src/ProfileContainer.css
+++ b/src/ProfileContainer.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;
     padding: 1rem;
     max-width: 100%;
 }
