--- a/src/confirmedpage.css
+++ b/src/confirmedpage.css
@@ -1,3 +1,7 @@
+.confirmedpage {
+    background-color: rgb(248, 250, 252);
+}
+
 .confirmed-page-window{
     max-height: 70vh;
     overflow-y: scroll;
