--- a/src/searchcontainer.css
+++ b/src/searchcontainer.css
@@ -1,4 +1,10 @@
+.searchpage {
+    background-color:rgb(248, 250, 252);
+    height: 100vh;
+}
+
 .search-page-window{
+    background-color: rgb(248, 250, 252);
     max-height: 85vh;
     overflow-y: scroll;
 }
