--- a/src/searchcontainer.css
+++ b/src/searchcontainer.css
@@ -1,10 +1,10 @@
 .searchpage {
     background-color:rgb(248, 250, 252);
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .search-page-window{
     background-color: rgb(248, 250, 252);
-    max-height: 85vh;
+    max-height: 82vh;
     overflow-y: scroll;
 }
